--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,5 @@ RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
 LazyData: true
+URL: https://github.com/NIM-ACh/youngSwimmers
+BugReports: https://github.com/NIM-ACh/youngSwimmers/issues
