--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,8 @@ RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
 LazyData: true
-URL: https://github.com/NIM-ACh/youngSwimmers
+URL: https://github.com/NIM-ACh/youngSwimmers,
+    https://nim-ach.github.io/youngSwimmers
 BugReports: https://github.com/NIM-ACh/youngSwimmers/issues
+Imports: 
+    lifecycle
