--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: youngSwimmers
-Title: Elite young swimmers
+Title: Data from the Elite young swimmers study
 Version: 0.0.0.9000
 Authors@R: 
     c(
